tests/samples/negative/pointers/index_pointer_to_array.ax
module index_pointer_to_array;

fn main() -> i32 {
    let values: *mut [2]i32 = null;
    return values[0][0];
}
